# dronecam

./: .gitignore  .gitmodules
client/: .gitignore  CMakeLists.txt  README.md  install-dronecam.sh  vars.default.cmake
client/src/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.hpp  Streamer.cpp  Streamer.hpp  WebRTCManager.cpp  WebRTCManager.hpp  main.cpp  utils.cpp  utils.hpp
observer-site/src/lib/: types.d.ts
observer-site/src/routes/observer/: +page.svelte
observer-site/src/routes/receiver/: +page.svelte
observer-site/src/routes/sender/: +page.svelte
server/src/routes/drones/: +page.svelte
servers/signaling/: index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts  messageTypes.d.ts  package-lock.json  package.json  schema.sql
servers/web/: package-lock.json  package.json
servers/web/src/routes/: +layout.svelte  +page.svelte  Portal.svelte
servers/web/src/routes/drones/: +page.svelte
servers/web/src/routes/login/: +page.svelte
servers/web/src/routes/sender/: +page.svelte
signaling-server/: index.js  index.js.map  index.ts  messageTypes.d.ts  package-lock.json  package.json
src/: main.cpp
